--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -31,7 +31,7 @@
 
     基于区域和基于连通部件的文字检测方法各有优缺点。其中，基于区域方法的检测结构可在噪声环境中精准提取到文字，这是因为这些方法在图像上大多采用滑动窗进行细致的探索，并执行多尺度的处理来提取特征。但相应地就会导致分类窗口过多，计算量太大，对时间性能的要求也更高；而另一类方法的处理目标是连通部件，其数量相比滑动窗要更可控，因此处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但此类方法的问题是在曝光或低对比度环境中难以从背景中分离出连通区域，并且过于依赖图像分割算法的结果。如何对这两类方法折衷，以在保证精准的文字检测效果的同时还能达到较高的效率，是一个值得深入研究的问题。
 
-    在基于连通部件的文字检测方法中主要有基于MSER 和基于边缘的这两类主流方法。MSER 类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER 的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN 分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
+    在基于连通部件的文字检测方法中主要有基于MSER 和基于边缘的这两类主流方法。MSER 类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER 的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER 的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN 分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
 
     依据以上提出的问题及对其的分析，本文提出了一种基于边缘骨架切割的文字检测方法。首先求取场景文字图片的边缘骨架图，并在其上利用8 连通域分析方法找到文字边缘和背景边缘的粘连点。然后自适应地断开这些粘连点，并将分离开来候选文字边缘骨架段输入到两阶段的CNN分类器中作文字与非文字的判别。最后提出一种结合MSER的局部迭代优化算法来提高文字检测的准确度。
 
@@ -282,40 +282,33 @@
     \section{文本行的局部迭代优化}
     \esection{Text line's iteratively local refinement}
 
-    本文上述所提出的基于边缘骨架切割的检测方法和2 阶段分类判别方法可以获得较高的文字检测查全率，但是文字检测结果同真实结果值(ground truth)之间的重叠率还是不满足期望。为了达到文字检测过程中的紧凑性(compactness) 标准，本文通过如图\ref{fig.c3_algori_ilr}所示的算法1来调整文字检测包围框，使其更靠近文字的真实位置：
-
-    %下面的算法\ref{alg:c3_iter_local_refine} 来调整文字检测包围框，使其更靠近文字的真实位置：
-
-    %\qquad \qquad \qquad \qquad 算法1 文本行的局部迭代优化算法
-
-
-    %\begin{algorithm}[!h] \renewcommand{\algorithmicrequire}{\textbf{输入：}}
-	%\renewcommand{\algorithmicensure}{\textbf{输出：}}
-	%\caption{文本行的局部迭代优化算法}
-	%\label{alg:c3_iter_local_refine}
-	%\begin{algorithmic}[1]
-		%\REQUIRE 候选文字边缘骨架的包围框集合 $B$, 以及求取的MSER 集合 $M$
-		%\ENSURE 经过局部迭代优化操作，对定位调整后的包围框集合 $R$
-		%\STATE 将MSER集合$M$按照位置分成2 类：强MSER 子集合$S$，是指包含在$B$ 边界内部的MSER 集合；弱MSER 子集合$W$ ，是指位于$B$ 边界之外的MSER 集合
-       % \FOR {$b \in B$}
-        %\STATE //本算法的目的是：在文本行方向上，将$b$ 调整为$b_{exp}$
-        %\STATE 计算位于$b$中的MSER$S$ 的特征均值$ms$
-		%\REPEAT
-       % \STATE $ws:=\left\{ w \in W |\,ol(b_{exp},w)>T_{ol}, | yc_{ms}-yc_w|<T_{yc} \right\}$
-       % \STATE $rs:=\left\{ w \in ws |\,Dist_{h,w,sw,c}(ms,w)<T_{h,w,sw,c} \right\}$
-       % \STATE $S:=S\cup rs,W:=W / rs$
-       % \UNTIL{$rs=\varnothing$}
-       % \STATE $R:=B \cap S$
-        %\ENDFOR
-	%\end{algorithmic}
-   % \end{algorithm}
-
-   \begin{figure*}[!h]
-   \centering
-   \includegraphics[width=\textwidth]{c3_algori_ilr.jpg}
-   \caption{文本行的局部迭代优化算法} \label{fig.c3_algori_ilr}
-   \end{figure*}
-
+    本文上述所提出的基于边缘骨架切割的检测方法和2 阶段分类判别方法可以获得较高的文字检测查全率，但是文字检测结果同真实结果值(ground truth)之间的重叠率还是不满足期望。为了达到文字检测过程中的紧凑性(compactness) 标准，本文通过如表\ref{tab.c3_algori_ilr}所示的算法来调整文字检测包围框，使其更靠近文字的真实位置：
+        
+    \begin{table}[!h]
+    \renewcommand\arraystretch{1.5}
+    \centering
+    \caption{文本行的局部迭代优化算法}
+    \begin{tabular}{p{0.95\columnwidth}}
+    \toprule
+    \textbf{输入：} 候选文字边缘骨架的包围框集合 $B$, 以及求取的MSER 集合 $M$\\
+    \textbf{输出：} 经过局部迭代优化操作，对定位调整后的包围框集合 $R$\\
+    \midrule
+     将MSER集合$M$按照位置分成2 类：强MSER 子集合$S$，是指包含在$B$ 边界内部的MSER 集合；弱MSER 子集合$W$ ，是指位于$B$ 边界之外的MSER 集合\\
+     \textbf{for} {$b \in B$}\\
+    \qquad //本算法的目的是：在文本行方向上，将$b$ 调整为$b_{exp}$ \\
+    \qquad 计算位于$b$中的MSER$S$ 的特征均值$ms$\\
+    \qquad \textbf{repeat}\\
+    \qquad \qquad $ws:=\left\{ w \in W |\,ol(b_{exp},w)>T_{ol}, | yc_{ms}-yc_w|<T_{yc} \right\}$ \\
+    \qquad \qquad $rs:=\left\{ w \in ws |\,Dist_{h,w,sw,c}(ms,w)<T_{h,w,sw,c} \right\}$ \\
+    \qquad \qquad $S:=S\cup rs,W:=W / rs$\\
+    \qquad \textbf{until} $rs=\varnothing$ \\
+    \qquad $R:=B \cap S$ \\
+    \textbf{end for} \\
+    \bottomrule
+    \label{tab.c3_algori_ilr}
+    \end{tabular}
+    \end{table}
+    
     其中，$Dist_f(s,w)$指的是$s_f$ 和$w_f$ 之间归一化的$L2$ 距离。而$f$ 是候选MSER 的特征，这些特征包含：$sw$ 是笔划宽度，$c$ 是HSV 和灰度的颜色通道，$h,w$ 是候选MSER 的高度和宽度；$yc$ 是候选MSER 在y 坐标轴上的中心坐标；另外函数$ol$用以计算2 个候选MSER 的包围框之间的重叠率；而$T$ 是经过实验计算得出的经验阈值。
 
     \begin{figure*}[!h]
@@ -324,7 +317,7 @@
     \label{fig.c3_iter_local_refine}
     \end{figure*}
 
-    利用局部迭代优化方法来矫正文本行的实验效果如图\ref{fig.c3_iter_local_refine} 所示：图中左边的是未经过局部迭代优化前的文字检测结果，其中用红色矩形框标注的是用基于边缘骨架切割的检测子提取出的候选文字，用蓝色矩形框标注的是用MSER 提出的候选文字；而图中右边的是经过局部迭代优化后得到的文字检测结果，可看出通过算法\ref{alg:c3_iter_local_refine} 将基于边缘骨架切割的文字检测子和基于MSER 的检测方法结合起来，从而追回那些因图像模糊而未被检测到的候选文字。通过文本行局部迭代优化后得到的最终检测结果如图\ref{fig.c3_iter_local_refine} 中右图内的黄色虚线包围框所示，可见包围框的查全率以及同真实结果值之间的重叠率都得到了极大提升。
+    利用局部迭代优化方法来矫正文本行的实验效果如图\ref{fig.c3_iter_local_refine} 所示：图中左边的是未经过局部迭代优化前的文字检测结果，其中用红色矩形框标注的是用基于边缘骨架切割的检测子提取出的候选文字，用蓝色矩形框标注的是用MSER 提出的候选文字；而图中右边的是经过局部迭代优化后得到的文字检测结果，可看出通过该算法将基于边缘骨架切割的文字检测子和基于MSER 的检测方法结合起来，从而追回那些因图像模糊而未被检测到的候选文字。通过文本行局部迭代优化后得到的最终检测结果如图\ref{fig.c3_iter_local_refine} 中右图内的黄色虚线包围框所示，可见包围框的查全率以及同真实结果值之间的重叠率都得到了极大提升。
 
     \section{实验和结果分析}
     \esection{Experimental Results}
@@ -355,7 +348,7 @@
 
         2）文字检测与目标检测也存在差异：首先，文字可以在字符、单词或文本行这几个层级（或称为粒度）上进行衡量；然后对于文字检测问题来说，其最终目标是为文字识别提供精准的输入，并且检测结果能极大程度地决定识别效果。
 
-        因此对于文字检测的评判要比一般目标检测更为严格。而在计算查全和查准时的关键是决断两个文字定位包围盒是否匹配。如图\ref{fig.c3_evalu_bbox_match}所示，总共存在3 种匹配的方式：
+        因此对于文字检测的评判要比一般目标检测更为严格。而在计算查全和查准时的关键是决断两个文字定位包围盒是否匹配。如图\ref{fig.c3_evalu_bbox_match} 所示，总共存在3 种匹配的方式：
 
         \begin{figure*}[!h]
         \centering
@@ -373,7 +366,7 @@
         \right.
         \label{eq.c3_match_1v1}
         \end{equation}
-        给定1个定位包围盒b，假设b是某一个包围盒真实值$G_i$，并且给定另外1 个包围盒的序列B，假设B是文字检测算法的定位结果D，那么如公式\ref{eq.c3_1v1_bestmatch}所示，算法BestMatch 表示的是b在集合B中的匹配得分，并会得到从0到1 之间的1 个数值：当集合B中存在1 个和b几乎完全重合的包围盒时值为1；相反当b 同B种的包围盒不存在任何的重合时值为0。
+        给定1个定位包围盒b，假设b是某一个包围盒真实值$G_i$，并且给定另外1 个包围盒的序列B，假设B是文字检测算法的定位结果D，那么如公式\ref{eq.c3_1v1_bestmatch}所示，算法BestMatch 表示的是b 在集合B中的匹配得分，并会得到从0到1 之间的1 个数值：当集合B中存在1 个和b几乎完全重合的包围盒时值为1；相反当b 同B种的包围盒不存在任何的重合时值为0。
         \begin{equation}
         \left\{
         \begin{array}{c}
@@ -397,13 +390,13 @@
         \end{equation}
         其中$t_r$和$t_p$分别是$\sigma_{ij}$和$\tau_{ij}$的阈值，且$t_r,t_p \in [0,1]$。则在新的测评方法中，三种匹配方式有以下定义：
 
-        1）一个真实区域$G_i$只和1个检测区域$D_j$ 匹配，也就是1对1的匹配。这种匹配方式要满足的条件是：$G_i$ 的大部分只能被$D_j$检测出来，即$\sigma_{ij} \ge t_r$；且只有$D_j$对$G_i$的查准率符合要求，即$\tau_{ij} \ge t_p$。
+        1）一个真实区域$G_i$只和1个检测区域$D_j$ 匹配，也就是1 对1的匹配。这种匹配方式要满足的条件是：$G_i$ 的大部分只能被$D_j$ 检测出来，即$\sigma_{ij} \ge t_r$；且只有$D_j$对$G_i$的查准率符合要求，即$\tau_{ij} \ge t_p$。
 
         2）一个真实区域$G_i$被检测区域集合D的子集$D_o$ 检测到了，也就是1 对多的匹配。该匹配满足的条件有：$D_o$中的每个区域都能检出$G_i$的部分，即$\tau_{ij} \ge t_p,\forall j \in D_o$；并且$S_o$ 能检测到$G_i$的大部分，即$\sum_{j \in S_o} \sigma_{ij} \ge t_r$。
 
-        3）一个算法检测到的区域$D_j$与真实区域集合G的子集$G_o$匹配，即多对1的匹配。满足条件为：$G_o$中的每个区域都有一部分能被检测到，即$\sigma_{ij} \ge t_r,\forall i \in G_o$；而且$D_j$也以一定的精度检测到了$G_o$，也就是$\sum_{i \in G_o} \tau_{ij} \ge t_p$。
+        3）一个算法检测到的区域$D_j$ 与真实区域集合G的子集$G_o$匹配，即多对1的匹配。满足条件为：$G_o$中的每个区域都有一部分能被检测到，即$\sigma_{ij} \ge t_r,\forall i \in G_o$；而且$D_j$也以一定的精度检测到了$G_o$，也就是$\sum_{i \in G_o} \tau_{ij} \ge t_p$。
 
-        根据上述规则，就可以定义在不同类型匹配情况下的匹配度$Match_G(G_i,D,t_r,t_p)$以及$Match_D(D_j,G,t_r,t_p)$，并得到最终的测评指标$R(G,D,t_r,t_p)$和$P(G,D,t_r,t_p)$，如公式\ref{eq.c3_R_P} 所示。
+        根据上述规则，就可以定义在不同类型匹配情况下的匹配度$Match_G(G_i,D,t_r,t_p)$ 以及$Match_D(D_j,G,t_r,t_p)$，并得到最终的测评指标$R(G,D,t_r,t_p)$和$P(G,D,t_r,t_p)$，如公式\ref{eq.c3_R_P} 所示。
         \begin{equation}
         \left\{
         \begin{array}{c}
@@ -500,6 +493,8 @@
 
         如表格\ref{tab.c3_msra}所示，本文的方法还与其它方法在微软MSRA-TD500 文字检测数据集上进行了对比。本章提出的方法取得了查全0.64，查准0.82 以及F 值0.72 的检测结果，其成绩显著高于其它方法。微软MSRA-TD500 数据集中的文本大多倾斜、弯曲并由多国语言构成。而从MSRA-TD500 的实验结果上来看，本方法可以在自然场景图像中成功检测到多方向和多语种的文本。
 
+        值得注意的是本章提出的方法是一种快速的文字检测算法。该方法的时间复杂度在O(n)，其中n是图像像素的个数。在ICDAR 2013 的数据集中，平均的图像尺寸大约是860 乘以640 个像素大小。实验表明该方法平均处理一张图像大概只用1.1 秒左右，其中包括了提取文字边缘骨架及其结点的耗时0.4s，以及基于自适应尺度变换的CNN文字检测方法用时0.7s。因此本方法可用于实时系统。
+
         \begin{figure}[!h]
         \centering
         \includegraphics[width=\textwidth]{c3_ic13_results.jpg}
@@ -513,6 +508,7 @@
         \caption{MSRA-TD500 上的测试结果示例}
         \label{fig.c3_msra_results}
         \end{figure}
+
 
     \section{本章小结}
     \esection{Brief Summary}
