--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -39,11 +39,11 @@
     \begin{minipage}[t]{0.48\linewidth}
     \centerline{ \small (b) 文字包围盒的长度不满足}
     \end{minipage}
-    \caption{当检测到的包围盒与ground truth的重叠率达到0.5 时，依然可能出现定位不精准的问题}
+    \caption{当检测到的包围盒与ground truth 的重叠率达到0.5 时，依然可能出现定位不精准的问题}
     \label{fig.c4_overlap}
     \end{figure*}
 
-    针对上述问题，本章提出一种基于二叉树搜索的文本行定位优化框架，用来调整候选文字包围盒与ground truth 的重叠率以提升文字检测和识别效果。该框架包含3个步骤：第1步是对所有的候选文字包围盒进行统计边缘响应（Static Skeleton-box Response，简称SSR 算法），然后对计算得到的SSR求取梯度并执行NMS操作，以获得候选文本行；第2步是将候选文本行的所有可能的排列组合方式构建成一个二叉树型搜索空间；第3步是仿照二叉树的后续遍历算法从搜索空间中找到一条最优路径，该路径对应着优化后的文字定位包围盒。值得注意的是在搜索最优文字定位的过程中还利用到了文字识别的结果，而经过该算法调优后的文字定位结果又进一步提升识别文字的精度。本章接下来内容会详细论述这一优化框架。
+    针对上述问题，本章提出一种基于二叉树搜索的文本行定位优化框架，用来调整候选文字包围盒与ground truth 的重叠率以提升文字检测和识别效果。该框架包含3个步骤：第1步是对所有的候选文字包围盒进行统计边缘响应（Static Skeleton-box Response，简称SSR 算法），然后对计算得到的SSR求取梯度并执行NMS操作，以获得候选文本行；第2 步是将候选文本行的所有可能的排列组合方式构建成一个二叉树型搜索空间；第3步是仿照二叉树的后续遍历算法从搜索空间中找到一条最优路径，该路径对应着优化后的文字定位包围盒。值得注意的是在搜索最优文字定位的过程中还利用到了文字识别的结果，而经过该算法调优后的文字定位结果又进一步提升识别文字的精度。本章接下来内容会详细论述这一优化框架。
 
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
@@ -84,32 +84,26 @@
         \subsection{统计边缘响应}
         \esubsection{Static Skeleton Response}
 
-        首先提出统计边缘响应方法，用以增强文本与背景之间的响应强度差异。给定如图\ref{fig.c4_static_skeleton_response}(a) 所示的场景文字图像$g$，计算其统计边缘响应$s$ 的方式如图\ref{fig.c4_ser}中算法2 所示：
+        首先提出统计边缘响应方法，用以增强文本与背景之间的响应强度差异。给定如图\ref{fig.c4_static_skeleton_response}(a) 所示的场景文字图像$g$，计算其统计边缘响应$s$ 的方式如表\ref{tab.c4_ser}中算法所示。
 
-        %算法\ref{alg:c4_static_skeleton_response} 所示：
-
-        %\begin{table*}[!h]
-        %\qquad \qquad \qquad \qquad 算法2 \quad 统计边缘响应
-        %\end{table*}
-        %\begin{algorithm} \renewcommand{\algorithmicrequire}{\textbf{输入:}}	\renewcommand{\algorithmicensure}{\textbf{输出:}}
-    	%\caption{统计边缘响应}
-    	%\label{alg:c4_static_skeleton_response}
-    	%\begin{algorithmic}[1]
-    		%\REQUIRE 输入的场景文字图像$g$
-    		%\ENSURE 图$g$相对应的统计边缘响应$s$
-            %\STATE 在图$g$上利用基于边缘骨架切割的文字检测子得到粗略的定位结果：文字定位包围框集合$B$ 及其相应的置信度分数集合$C$
-    		%\REPEAT
-            %\STATE $rs:=\left\{ b \times c  |\,b \in B, c \in C\right\}$
-            %\STATE $s:=s\cup rs,B:=B / b,C:=C / c$
-            %\UNTIL{$B=\varnothing$}
-    	%\end{algorithmic}
-        %\end{algorithm}
-
-        \begin{figure*}[!h]
+        \begin{table}[!h]
+        \renewcommand\arraystretch{1.5}
         \centering
-        \includegraphics[width=\textwidth]{c4_ser.jpg}
-        \caption{统计边缘响应} \label{fig.c4_ser}
-        \end{figure*}
+        \caption{统计边缘响应}
+        \begin{tabular}{p{0.95\columnwidth}}
+        \toprule
+        \textbf{输入：} 输入的场景文字图像$g$\\
+        \textbf{输出：} 图$g$相对应的统计边缘响应$s$\\
+        \midrule
+         在图$g$上利用基于边缘骨架切割的文字检测子得到粗略的定位结果：文字定位包围框集合$B$ 及其相应的置信度分数集合$C$\\
+         \textbf{repeat} \\
+        \qquad \qquad $rs:=\left\{ b \times c  |\,b \in B, c \in C\right\}$ \\
+        \qquad \qquad  $s:=s\cup rs,B:=B / b,C:=C / c$ \\
+        \textbf{until} $B=\varnothing$ \\
+        \bottomrule
+        \label{tab.c4_ser}
+        \end{tabular}
+        \end{table}
 
         其中$rs$指代的是响应小块，它的底面积是1 个定位包围框$b$，而高是$b$ 对应的置信度分数$c$。 将所有的这些响应小块$rs$ 堆叠在一起，就构成了如图\ref{fig.c4_static_skeleton_response}(b) 所示的统计边缘响应$s$。
 
@@ -167,14 +161,14 @@
         \label{fig.c4_candidate_line_construction}
         \end{figure*}
 
-        为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$ 在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$ 的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$ 上这些对应的位置上不存在文字区域与背景区域间的边界。
+        为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$, 如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$ 表征着响应$hp$ 在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$ 的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$ 上这些对应的位置上不存在文字区域与背景区域间的边界。
 
-        为了便于观察和分析，首先对梯度值$g$ 取正，并将其提高至与$hp$统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b) 所示，这时得到的梯度值是$g$$'$。 最后在梯度值$g$$'$上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，而$L$ 由如图\ref{fig.c4_candidate_line_construction}(c) 中的$m$ 条红色候选文本行分割线组成。
+        为了便于观察和分析，首先对梯度值$g$ 取正，并将其提高至与$hp$ 统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b) 所示，这时得到的梯度值是$g$$'$。 最后在梯度值$g$$'$ 上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，而$L$ 由如图\ref{fig.c4_candidate_line_construction}(c) 中的$m$ 条红色候选文本行分割线组成。
 
     \section{二叉树型的文字行搜索空间的构建}
     \esection{Binary Tree-based search space's construction}
 
-    将候选文本行集合$L$展现在场景文字原图上，如图\ref{fig.c4_binary_tree_construction}(b) 所示。$L$ 由$m$ 条红线$l_i, i=1,2,...,m$ 构成，这些红线是候选文本行分割线，并且在场景文字原图上分割出$m+1$个候选文本行条带，而这些文本行条带就是任两个相邻红线$l_i$和$l_{i+1}$ 之间的图像区域。那么现阶段的任务是，将所有候选文本行条带区域的排列组合作为1 个搜索空间，然后从中搜寻出最优的文本行条带组合，而这些条带区域能恰如其分地覆盖住文字所在的图像区域。
+    将候选文本行集合$L$展现在场景文字原图上，如图\ref{fig.c4_binary_tree_construction}(b) 所示。$L$ 由$m$ 条红线$l_i, i=1,2,...,m$ 构成，这些红线是候选文本行分割线，并且在场景文字原图上分割出$m+1$ 个候选文本行条带，而这些文本行条带就是任两个相邻红线$l_i$和$l_{i+1}$ 之间的图像区域。那么现阶段的任务是，将所有候选文本行条带区域的排列组合作为1 个搜索空间，然后从中搜寻出最优的文本行条带组合，而这些条带区域能恰如其分地覆盖住文字所在的图像区域。
 
     \begin{figure*}[!h]
     \centering
@@ -191,51 +185,41 @@
 
     假设红色分割线$l_i$有2个属性：距离$ld_i$ 和置信度$lc_i$。 其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331 个像素大小。而$lc_i$ 是分割线$l_i$的置信度，其数值是由$l_i$ 的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
 
-    然后假设我们要构建的二叉树型搜索空间$N$ 是由一些结点$n$ 构成的。其中任一结点$n_i$ 有2 个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$ 之间的区域，而$n_5$ 的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
+    然后假设我们要构建的二叉树型搜索空间$N$ 是由一些结点$n$ 构成的。其中任一结点$n_i$ 有2 个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。 以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$ 之间的区域，而$n_5$ 的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
 
-    在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$ 中各变量的含义后，由$L$ 构建$N$ 的过程如图\ref{fig.c4_build_binary_tree}中的算法3所示：
+    在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$ 中各变量的含义后，由$L$ 构建$N$ 的过程如表\ref{tab.c4_build_binary_tree}中的算法所示。
 
-    %算法\ref{alg:c4_build_binary_tree} 所示：
+    \begin{table}[!h]
+    \renewcommand\arraystretch{1.5}
+    \centering
+    \caption{递归地建立二叉树型搜索空间}
+    \begin{tabular}{p{0.95\columnwidth}}
+    \toprule
+    \textbf{输入：} 分割线 $L$ 的距离 $LD=\left\{ld_1,ld_2,...,ld_m\right\}$ 和置信度$LC=\left\{lc_1,lc_2,...,lc_m\right\}$\\
+    \textbf{输出：} 二叉树型搜索空间 $N$ 的结点范围 $NR=\left\{nr_1,nr_2,...,nr_{2m-3}\right\}$, 和结点的值 $NV=\left\{nv_1,nv_2,...,nv_{2m-3}\right\}$\\
+    \midrule
+    \textbf{初始化：}\\
+    \qquad $i=0, \quad BuildBinaryTree(i,LD,LC)$\\
+    \textbf{function} $BuildBinaryTree(i,LD,LC)$\\
+    \qquad $i=i+1$ \\
+    \qquad $\textbf{if} \quad length(LD)==2 \quad \textbf{then}$ \\
+    \qquad \qquad $nr_{i}=[LD[1],LD[2]], nv_{i}=0$ \\
+    \qquad \qquad \textbf{return} \\
+    \qquad $\textbf{end if}$ \\
+    \qquad $nr_{i}=[LD[1],LD[end]], nv_{i}=max(LC)$ \\
+    \qquad $//$假设$LC$中的最大值是$lc_t$，其中$t$ 是$lc_t$ 的索引 \\
+    \qquad $//$在索引$t$处将$L$ 分裂成左子集和右子集 \\
+    \qquad $LD_{l}=\left\{LD[1],...,LD[t]\right\}, LC_{l}=\left\{LC[1],...,LC[t]\right\}$\\
+    \qquad $BuildBinaryTree(i,LD_{l},LC_{l})$ \\
+    \qquad $LD_{r}=\left\{LD[t],...,LD[end]\right\}, LC_{r}=\left\{LC[t],...,LC[end]\right\}$ \\
+    \qquad $BuildBinaryTree(i,LD_{r},LC_{r})$ \\
+    \textbf{end function}\\
+    \bottomrule
+    \label{tab.c4_build_binary_tree}
+    \end{tabular}
+    \end{table}
 
-    %\clearpage
-    %\begin{table*}[!h]
-    %\qquad \qquad \qquad \qquad 算法3 \quad 递归地建立二叉树型搜索空间
-    %\end{table*}
-
-    %\begin{algorithm}[!h]
-	%\renewcommand{\algorithmicrequire}{\textbf{输入:}}
-	%\renewcommand{\algorithmicensure}{\textbf{输出:}}
-	%\caption{递归地建立二叉树型搜索空间}
-	%\label{alg:c4_build_binary_tree}
-	%\begin{algorithmic}[1]
-		%\REQUIRE 分割线 $L$ 的距离 $LD=\left\{ld_1,ld_2,...,ld_m\right\}$ 和置信度$LC=\left\{lc_1,lc_2,...,lc_m\right\}$
-		%\ENSURE 二叉树型搜索空间 $N$ 的结点范围 $NR=\left\{nr_1,nr_2,...,nr_{2m-3}\right\}$, 和结点的值 $NV=\left\{nv_1,nv_2,...,nv_{2m-3}\right\}$
-      %\STATE 初始化: \\
-      %\STATE \quad $i=0, \quad BuildBinaryTree(i,LD,LC)$
-      %\STATE function $BuildBinaryTree(i,LD,LC)$
-      %  \\\STATE \quad $i=i+1$
-      %  \\\STATE \quad $if \quad length(LD)==2 \quad then$
-      %  \\\STATE \qquad $nr_{i}=[LD[1],LD[2]], nv_{i}=0$
-      %  \\\STATE \qquad $return$
-      %  \\\STATE \quad $end \ if$
-      %  \\\STATE \quad $nr_{i}=[LD[1],LD[end]], nv_{i}=max(LC)$
-      %  \\\STATE \quad $//$假设$LC$中的最大值是$lc_t$，其中$t$ 是$lc_t$ 的索引
-      %  \\\STATE \quad $//$在索引$t$处将$L$ 分裂成左子集和右子集
-       % \\\STATE \quad $LD_{l}=\left\{LD[1],...,LD[t]\right\}, LC_{l}=\left\{LC[1],...,LC[t]\right\}$
-      %  \\\STATE \quad $BuildBinaryTree(i,LD_{l},LC_{l})$
-      %  \\\STATE \quad $LD_{r}=\left\{LD[t],...,LD[end]\right\}, LC_{r}=\left\{LC[t],...,LC[end]\right\}$
-      %  \\\STATE \quad $BuildBinaryTree(i,LD_{r},LC_{r})$
-      %\STATE end function
-	%\end{algorithmic}
-    %\end{algorithm}
-
-   \begin{figure*}[!h]
-   \centering
-   \includegraphics[width=\textwidth]{c4_build_binary_tree.jpg}
-   \caption{递归地建立二叉树型搜索空间} \label{fig.c4_build_binary_tree}
-   \end{figure*}
-
-    那么，通过算法3从$L$ 中构建好的二叉树型搜索空间$N$就将存储在如图中的表格内。下一节，将介绍从搜索空间$N$ 中搜寻出最优文本行定位的搜索策略。
+    那么，通过该算法从$L$ 中构建好的二叉树型搜索空间$N$ 就将存储在如图\ref{fig.c4_bianry_tree_search}(a)中的表格内。下一节，将介绍从搜索空间$N$ 中搜寻出最优文本行定位的搜索策略。
 
 
 
@@ -245,50 +229,40 @@
         \subsection{搜索路径}
         \esubsection{Searching the paths}
 
-        给定二叉树型搜索空间$N$,假设$N$是由$m$ 个结点$n$ 构成，那么通过图\ref{fig.c4_algori_bts}中的算法4，就可搜索出路径$P={p_1,p_2,...,p_{(m-1)/2}}$。 路径中的每个$p_i \in P$ 都是1个3元组：包含了父亲结点$np_i$，左子结点$nl_i$ 和右子结点$nr_i$。
+        给定二叉树型搜索空间$N$,假设$N$ 是由$m$ 个结点$n$ 构成，那么通过表\ref{tab.c4_algori_bts}中的算法，就可搜索出路径$P={p_1,p_2,...,p_{(m-1)/2}}$。 路径中的每个$p_i \in P$ 都是1个3元组：包含了父亲结点$np_i$，左子结点$nl_i$ 和右子结点$nr_i$。
 
-        %\begin{algorithm}[!h]
-    	%\renewcommand{\algorithmicrequire}{\textbf{输入:}}	
-        %\renewcommand{\algorithmicensure}{\textbf{输出:}}
-    	%\caption{从二叉树型搜索空间中找到最优路径}
-    	%\label{alg:c4_binary_tree_search}
-    	%\begin{algorithmic}[1]
-    		%\REQUIRE 二叉树型搜索空间 $N=\left\{n_1,n_2,...,n_m\right\}$， 其中每个结点$n_x \in N$有其相应的属性: 范围$nr_x$ 和值$nv_x$
-    		%\ENSURE 搜索到的路径 $P=\left\{p_1,p_2,...,p_{(m-1)/2}\right\}$， 其中每条路径$p_{i} \in P$ 包含结点三元组$p_{i}=\left\{np_{i},nl_{i},nr_{i}\right\}$
+    \begin{table}[!h]
+    \renewcommand\arraystretch{1.5}
+    \centering
+    \caption{从二叉树型搜索空间中找到最优路径}
+    \begin{tabular}{p{0.95\columnwidth}}
+    \toprule
+    \textbf{输入：} 二叉树型搜索空间 $N=\left\{n_1,n_2,...,n_m\right\}$， 其中每个结点$n_x \in N$ 有其相应的属性: 范围$nr_x$ 和值$nv_x$ \\
+    \textbf{输出：} 搜索到的路径 $P=\left\{p_1,p_2,...,p_{(m-1)/2}\right\}$， 其中每条路径$p_{i} \in P$ 包含结点三元组$p_{i}=\left\{np_{i},nl_{i},nr_{i}\right\}$ \\
+    \midrule
+    \textbf{初始化：} $idx = 0$\\
+    \textbf{for} $i=1$ to $(m-1)/2$ \textbf{do} \\
+    \qquad \textbf{for} $j=1$ to $m$ \textbf{do} \\
+    \qquad \qquad \textbf{if} $nv_j$ == $leastPositive(NV)$ \textbf{then} \\
+    \qquad \qquad \qquad $np_i = n_j, nv_j = 0, idx = j$ \\
+    \qquad \qquad \textbf{end if} \\
+    \qquad \qquad \textbf{if} $nr_j[1]$ == $nr_{idx}[1]$ and $nv_j$ == $0$ \textbf{then} \\
+    \qquad \qquad \qquad $nl_i = n_j, nv_j = -1$ \\
+    \qquad \qquad \textbf{end if} \\
+    \qquad \qquad \textbf{if} $nr_j[2]$ == $nr_{idx}[2]$ and $nv_j$ == $0$ \textbf{then} \\
+    \qquad \qquad \qquad $nr_i = n_j, nv_j = -1$ \\
+    \qquad \qquad \textbf{end if} \\
+    \qquad \textbf{end for} \\
+    \qquad $p_{i}$ = $\left\{ np_{i},nl_{i},nr_{i} \right\}$ \\
+    \textbf{end for} \\
+    \bottomrule
+    \label{tab.c4_algori_bts}
+    \end{tabular}
+    \end{table}
 
-          %\STATE 初始化: $idx=0$
-          %\FOR{$i=1$ to $(m-1)/2$}
+        该算法的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$ 个结点，那么算法就要迭代执行$(m-2)/2$ 次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$ 中寻找能赋予路径三元组中左子结点$nl_i$ 的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1] 须和$n_j$ 的范围的左边界$nr_j$[1] 相等，且其值$nv_x$ 须为0。 那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$ 设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
 
-          %\FOR{$j=1$ to $m$}
-          %\IF{$nv_j$ == $leastPositive(NV)$}
-          %\STATE $np_i = n_j, nv_j = 0, idx = j$
-          %\ENDIF
-
-         % \IF{$nr_j[1]$ == $nr_{idx}[1]$ and $nv_j$ == $0$}
-         % \STATE $nl_i = n_j, nv_j = -1$
-         % \ENDIF
-
-         % \IF{$nr_j[2]$ == $nr_{idx}[2]$ and $nv_j$ == $0$}
-          %\STATE $nr_i = n_j, nv_j = -1$
-          %\ENDIF
-
-          %\ENDFOR
-
-          %\STATE $p_{i}$ = $\left\{ %np_{i},nl_{i},nr_{i} \right\}$
-
-          %\ENDFOR
-    	  %\end{algorithmic}
-        %\end{algorithm}
-
-        \begin{figure*}[!h]
-        \centering
-        \includegraphics[width=\textwidth]{c4_algori_bts.jpg}
-        \caption{文本行的局部迭代优化算法} \label{fig.c4_algori_bts}
-        \end{figure*}
-
-        算法4的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$ 个结点，那么算法就要迭代执行$(m-2)/2$ 次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$ 的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$ 中寻找能赋予路径三元组中左子结点$nl_i$ 的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1] 须和$n_j$ 的范围的左边界$nr_j$[1] 相等，且其值$nv_x$ 须为0。 那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$ 设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$ 的值改为-1。
-
-        以上过程是算法4的第i次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$ 个三元组$p$的路径集合$P$ 就被构建了出来。
+        以上过程是本算法的第i次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$ 个三元组$p$的路径集合$P$ 就被构建了出来。
 
         \begin{figure*}[!h]
         \centering
@@ -306,7 +280,7 @@
         \label{fig.c4_bianry_tree_search}
         \end{figure*}
 
-        为了更直观地理解算法4：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7 个结点；然后采用算法4在$N$ 上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1 个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法4的搜索结果。
+        为了更直观地理解此算法：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7 个结点；然后采用该算法在$N$ 上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1 个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为这个算法的搜索结果。
 
         \subsection{搜索策略}
         \esubsection{Searching strategies}
@@ -320,7 +294,7 @@
 
         （2）仅保留子结点$n_6$ 所代表的那部分单独的文本行区域，而剪掉父亲结点$n_5$ 所代表的融合的文本行区域以及子结点$n_7$ 所代表的单独的文本行区域；
 
-        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b) 所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$ 以及$n_5$ 的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading} 的深度学习文字识别网络。我们按照结点的范围区域$nr$ 来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
+        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b) 所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$ 以及$n_5$ 的识别成绩高低。这里采用的识别模型是Jaderberg 等\cite{Jaderberg2016Reading} 的深度学习文字识别网络。我们按照结点的范围区域$nr$ 来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
 
         \begin{figure*}[!h]
         \centering
@@ -332,7 +306,7 @@
         \label{fig.c4_search_strategy}
         \end{figure*}
 
-        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1 种情况条目进行后续的处理。然后在第2 阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1 阶段的判定过程，选定情况条目3；然后在情况条目3 中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$ 代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
+        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$ 种情况中只选定1 种情况条目进行后续的处理。然后在第2 阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$ 都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1 阶段的判定过程，选定情况条目3；然后在情况条目3 中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$ 代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
 
         同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$ 中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
 
@@ -342,11 +316,11 @@
         \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
 
-        为了验证本章提出的文字检测方法的效果和性能，我们将这个方法在ICDAR 2003(IC03)，ICDAR 2011(IC11)以及ICDAR 2013(IC13) 测试数据集上都运行并得到了结果。其中IC03，IC11和IC13各包含251，255及233张标注了文本的自然场景图像。这些测试数据集因其字体、颜色、尺度和光照的不同和变化而极具挑战性。
+        为了验证本章提出的文字检测方法的效果和性能，我们将这个方法在ICDAR 2003(IC03)，ICDAR 2011(IC11)以及ICDAR 2013(IC13) 测试数据集上都运行并得到了结果。其中IC03，IC11和IC13 各包含251，255及233张标注了文本的自然场景图像。这些测试数据集因其字体、颜色、尺度和光照的不同和变化而极具挑战性。
 
         最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
 
-        用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object}提出的Object/area graphs 方法。其中对文字检测查全和查准率的计算公式\ref{eq:c4_eval} 所示：
+        用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object} 提出的Object/area graphs 方法。其中对文字检测查全和查准率的计算公式\ref{eq:c4_eval} 所示：
 
         \begin{equation}
         recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,
@@ -363,7 +337,9 @@
 
         如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013 上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny} 的方法取得了81.1\%的检测F 值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
 
-        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN 的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013 的数据集中，平均的图像尺寸大约是1200乘以900 个像素大小。而本章提出的方法平均处理一张图像大概只用0.76 秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
+        %值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN 的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013 的数据集中，平均的图像尺寸大约是1200 乘以900 个像素大小。而本章提出的方法平均处理一张图像大概只用0.76 秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。
+
+        此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
 
         \begin{table*}[!h]
         %\small
@@ -414,7 +390,7 @@
         \label{tab.c4_icdar11}
         \end{table*}
 
-        %图\ref{fig.c4_recall_proposals}展示的是在本章提出方法的各阶段中，字符检出率与候选字符提取数目的关系折线图。与上一章提出的He\cite{He2017scene} 的方法相比，本章的方法在基于边缘骨架切割的文字检测子的基础上，融入了基于二叉树型搜索空间搜索的文本行定位优化方法。其中，基于二叉树搜索的文本行矫正进一步减少了非文字候选字符的提取数目，同时却提升了候选字符的查全效果。因此本章方法相对上一章方法，字符检出率增高2\%，且提取的候选字符数目能降低10\%。
+        %图\ref{fig.c4_recall_proposals} 展示的是在本章提出方法的各阶段中，字符检出率与候选字符提取数目的关系折线图。与上一章提出的He\cite{He2017scene} 的方法相比，本章的方法在基于边缘骨架切割的文字检测子的基础上，融入了基于二叉树型搜索空间搜索的文本行定位优化方法。其中，基于二叉树搜索的文本行矫正进一步减少了非文字候选字符的提取数目，同时却提升了候选字符的查全效果。因此本章方法相对上一章方法，字符检出率增高2\%，且提取的候选字符数目能降低10\%。
 
         %\begin{figure}[!h]
         %\centering
@@ -425,7 +401,7 @@
 
         在第\ref{sec.c4_searching strategies} 节基于二叉树搜索的文本行优化的搜索策略中，我们详细探讨过自然场景文字检测与识别之间的紧密关系。其中，依据文字识别的成绩，文字检测的结果才能更准确的定位到文本行的位置。而反过来，更准确的文字检测结果，也会进一步的增强文字识别的精度。
 
-        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50 数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77 的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F 值的提升均在2\%左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
+        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50 数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77 的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F 值的提升均在2\% 左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
 
         \begin{table*}[!h]
         %\small
@@ -452,7 +428,7 @@
         \label{tab.c4_recognition}
         \end{table*}
 
-        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\% 的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11 和ICDAR13 数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT 数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
+        对于表\ref{tab.c4_recognition} 中那些不含词典(lexicon) 的文字图片数据集，同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\% 的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11 和ICDAR13 数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT 数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
 
         \begin{figure}[!h]
         \centering
@@ -474,6 +450,6 @@
 
     本章提出的是基于二叉树搜索的文本行定位矫正方法。首先对于输入的场景文字图片，利用上一章提出检测子来提取粗略的候选文字包围盒定位结果。然而其定位结果存在重叠率不足的问题，为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，接着通过对统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于上一章得到的粗略定位结果而言，其文字检测的精度得到了大幅提升。
 
-    在ICDAR系列测试集以及谷歌街景数据集SVT 上，我们将本章提出的方法与其它先进方法以及上一章的方法都做了对比实验。实验结果验证了本章方法的有效性。
+    在ICDAR系列测试集以及谷歌街景数据集SVT 上，将本章提出的方法与其它先进方法以及上一章的方法都做了对比实验。实验结果验证了本章方法的有效性。
 
 
